--- a/_sass/content.scss
+++ b/_sass/content.scss
@@ -207,6 +207,8 @@
   h6,
   #toctitle {
     position: relative;
+    font-weight: bold;
+    font-family: 'S-CoreDream-3Light';
     margin-top: 1.5em;
     margin-bottom: 0.25em;
 
