--- a/_sass/code.scss
+++ b/_sass/code.scss
@@ -169,7 +169,7 @@ figure.highlight {
 
 // setting the spacing and scrollbar on the thirt level for the second case
 .highlight .table-wrapper {
-  padding: $sp-3 0;
+  // padding: $sp-3 0; 
   margin: 0;
   border: 0;
   box-shadow: none;
@@ -186,8 +186,8 @@ figure.highlight {
 
   td.gl {
     width: 1em;
-    padding-right: $sp-3;
-    padding-left: $sp-3;
+    padding-right: $sp-2;
+    padding-left: $sp-1;
   }
 
   pre {
